samples/_failures_safe/1761277564_acd6f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8795343.c: In function ‘main’:
./samples/SAFE/__tmp_c8795343.c:147:82: error: expected ‘)’ at end of input
  147 |         if (is_error_level(entries[i].level) && is_error_level(entries[i-1].level
      |                                                               ~                  ^
      |                                                                                  )
./samples/SAFE/__tmp_c8795343.c:147:9: error: expected declaration or statement at end of input
  147 |         if (is_error_level(entries[i].level) && is_error_level(entries[i-1].level
      |         ^~
./samples/SAFE/__tmp_c8795343.c:147:9: error: expected declaration or statement at end of input
